--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
+    "axios-retry": "^3.6.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "cron": "^2.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.8.1",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
     "randomstring": "^1.3.0"
   },
