--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,9 @@ JWT_SECRET=
 JWT_EXPIRATION=
 
 # Email Configs
-SENDGRID_USERNAME=
-SENDGRID_PASSWORD=
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
+EMAIL_HOST=
+EMAIL_PORT=
 
 EMAIL_FROM=
